--- a/GraviEngine/GraviEngine.vcxproj
+++ b/GraviEngine/GraviEngine.vcxproj
@@ -15,21 +15,22 @@
     <ClCompile Include="..\Sources\Core\FileStream.cpp" />
     <ClCompile Include="..\Sources\Core\Input.cpp" />
     <ClCompile Include="..\Sources\Core\Master.cpp" />
-    <ClCompile Include="..\Sources\Entity\Box.cpp" />
-    <ClCompile Include="..\Sources\Entity\Line.cpp" />
-    <ClCompile Include="..\Sources\Entity\Mass.cpp" />
-    <ClCompile Include="..\Sources\Entity\Shape.cpp" />
-    <ClCompile Include="..\Sources\Entity\Sky.cpp" />
-    <ClCompile Include="..\Sources\Entity\Smoke.cpp" />
-    <ClCompile Include="..\Sources\Entity\Star.cpp" />
-    <ClCompile Include="..\Sources\Entity\Video.cpp" />
-    <ClCompile Include="..\Sources\Entity\Wave.cpp" />
-    <ClCompile Include="..\Sources\Entity\WaveOut.cpp" />
     <ClCompile Include="..\Sources\GameBase.cpp" />
     <ClCompile Include="..\Sources\main.cpp" />
     <ClCompile Include="..\Sources\Math\Physics.cpp" />
     <ClCompile Include="..\Sources\Math\Random.cpp" />
     <ClCompile Include="..\Sources\Math\Tensus.cpp" />
+    <ClCompile Include="..\Sources\Physics\Box.cpp" />
+    <ClCompile Include="..\Sources\Physics\Line.cpp" />
+    <ClCompile Include="..\Sources\Physics\Mass.cpp" />
+    <ClCompile Include="..\Sources\Physics\Shape.cpp" />
+    <ClCompile Include="..\Sources\Physics\Sky.cpp" />
+    <ClCompile Include="..\Sources\Physics\Smoke.cpp" />
+    <ClCompile Include="..\Sources\Physics\Star.cpp" />
+    <ClCompile Include="..\Sources\Physics\Transform.cpp" />
+    <ClCompile Include="..\Sources\Physics\Video.cpp" />
+    <ClCompile Include="..\Sources\Physics\Wave.cpp" />
+    <ClCompile Include="..\Sources\Physics\WaveOut.cpp" />
     <ClCompile Include="..\Sources\Render\RenderGL.cpp" />
     <ClCompile Include="..\Sources\SceneBase.cpp" />
   </ItemGroup>
@@ -41,18 +42,6 @@
     <ClInclude Include="..\Sources\Core\Input.h" />
     <ClInclude Include="..\Sources\Core\Master.h" />
     <ClInclude Include="..\Sources\Core\Node.h" />
-    <ClInclude Include="..\Sources\Entity\Box.h" />
-    <ClInclude Include="..\Sources\Entity\Entity.h" />
-    <ClInclude Include="..\Sources\Entity\Line.h" />
-    <ClInclude Include="..\Sources\Entity\Mash.h" />
-    <ClInclude Include="..\Sources\Entity\Mass.h" />
-    <ClInclude Include="..\Sources\Entity\Shape.h" />
-    <ClInclude Include="..\Sources\Entity\Sky.h" />
-    <ClInclude Include="..\Sources\Entity\Smoke.h" />
-    <ClInclude Include="..\Sources\Entity\Star.h" />
-    <ClInclude Include="..\Sources\Entity\Video.h" />
-    <ClInclude Include="..\Sources\Entity\Wave.h" />
-    <ClInclude Include="..\Sources\Entity\WaveOut.h" />
     <ClInclude Include="..\Sources\GameBase.h" />
     <ClInclude Include="..\Sources\Math\Color.h" />
     <ClInclude Include="..\Sources\Math\Line.h" />
@@ -66,6 +55,19 @@
     <ClInclude Include="..\Sources\Math\Tensus.h" />
     <ClInclude Include="..\Sources\Math\Vector3f.h" />
     <ClInclude Include="..\Sources\Math\VectorField.h" />
+    <ClInclude Include="..\Sources\Physics\Box.h" />
+    <ClInclude Include="..\Sources\Physics\Entity.h" />
+    <ClInclude Include="..\Sources\Physics\Line.h" />
+    <ClInclude Include="..\Sources\Physics\Mash.h" />
+    <ClInclude Include="..\Sources\Physics\Mass.h" />
+    <ClInclude Include="..\Sources\Physics\Shape.h" />
+    <ClInclude Include="..\Sources\Physics\Sky.h" />
+    <ClInclude Include="..\Sources\Physics\Smoke.h" />
+    <ClInclude Include="..\Sources\Physics\Star.h" />
+    <ClInclude Include="..\Sources\Physics\Transform.h" />
+    <ClInclude Include="..\Sources\Physics\Video.h" />
+    <ClInclude Include="..\Sources\Physics\Wave.h" />
+    <ClInclude Include="..\Sources\Physics\WaveOut.h" />
     <ClInclude Include="..\Sources\Render\Render.h" />
     <ClInclude Include="..\Sources\Render\RenderGL.h" />
     <ClInclude Include="..\Sources\SceneBase.h" />
